[gd_scene load_steps=19 format=3 uid="uid://cb6kxb3c15wu0"]

[ext_resource type="Script" uid="uid://bnlx0ny3kbh5p" path="res://deck_editor/deck.gd" id="1_qmcf7"]
[ext_resource type="Shader" uid="uid://dd44327pue4al" path="res://CheckerBoard.gdshader" id="2_u7bsx"]
[ext_resource type="Texture2D" uid="uid://dwje66hs23f8k" path="res://Untitled.png" id="3_tc5mp"]
[ext_resource type="Texture2D" uid="uid://ctnqx30f536bd" path="res://buttonD.png" id="5_8ceso"]
[ext_resource type="PackedScene" uid="uid://ddppvatnhue0j" path="res://deck_editor/card_bank/card_bank.tscn" id="6_jf1t1"]
[ext_resource type="PackedScene" uid="uid://dty0g66hktuqv" path="res://deck_editor/export_progress.tscn" id="6_k07om"]
[ext_resource type="Texture2D" uid="uid://cgd0fn7rsifvy" path="res://buttonH.png" id="6_vcwqf"]
[ext_resource type="Texture2D" uid="uid://dxyfm0irggcn2" path="res://IndicationLabelL.png" id="7_dkq5p"]
[ext_resource type="PackedScene" uid="uid://i8awmdkidw6c" path="res://deck_editor/card_bank/filter_buttons.tscn" id="7_wm0ci"]
[ext_resource type="LabelSettings" uid="uid://pf0eb6aywlnv" path="res://theme/label.tres" id="8_k7fvg"]
[ext_resource type="LabelSettings" uid="uid://st2grw3erafg" path="res://theme/big_number.tres" id="9_gu7aw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ok1va"]
shader = ExtResource("2_u7bsx")
shader_parameter/tint = Vector4(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hutxd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gev8a"]
texture = ExtResource("6_vcwqf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_clach"]
texture = ExtResource("6_vcwqf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vytye"]
texture = ExtResource("5_8ceso")

[sub_resource type="LabelSettings" id="LabelSettings_hd6hl"]
font_color = Color(0.92549, 0.180392, 0.564706, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dmw5w"]
font_size = 12

[node name="Deck" type="Node"]
script = ExtResource("1_qmcf7")

[node name="BG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ok1va")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tc5mp")
stretch_mode = 1

[node name="Port" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 311.0
offset_bottom = 132.0

[node name="LoadImport" type="Button" parent="Port"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 294.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_hutxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gev8a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_clach")
theme_override_styles/normal = SubResource("StyleBoxTexture_vytye")
action_mode = 0
button_mask = 3
text = "Load / Import Deck"

[node name="SaveExport" type="Button" parent="Port"]
layout_mode = 0
offset_left = 20.0
offset_top = 57.0
offset_right = 294.0
offset_bottom = 89.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_hutxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gev8a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_clach")
theme_override_styles/normal = SubResource("StyleBoxTexture_vytye")
disabled = true
action_mode = 0
button_mask = 3
text = "Save / Export Deck"

[node name="ColorRect" parent="Port/SaveExport" instance=ExtResource("6_k07om")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.5
offset_top = -8.88
offset_right = 111.5
offset_bottom = 8.88
grow_horizontal = 2
grow_vertical = 2

[node name="Singleton" type="Button" parent="Port"]
layout_mode = 1
anchors_preset = -1
offset_left = 80.0
offset_top = 96.0
offset_right = 228.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_hutxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gev8a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_clach")
theme_override_styles/normal = SubResource("StyleBoxTexture_vytye")
toggle_mode = true
text = "Toggle: Singleton"

[node name="Deck" type="ScrollContainer" parent="."]
anchors_preset = -1
anchor_left = 0.489
anchor_right = 0.489
offset_left = -240.328
offset_top = 185.0
offset_right = 239.672
offset_bottom = 605.0
horizontal_scroll_mode = 0

[node name="Grid" type="GridContainer" parent="Deck"]
clip_contents = true
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="Card" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 136.0
offset_right = 317.0
offset_bottom = 556.0
expand_mode = 1

[node name="Filter" parent="Card" instance=ExtResource("7_wm0ci")]
visible = false

[node name="Help" type="Label" parent="."]
visible = false
offset_left = 13.0
offset_top = 264.0
offset_right = 362.0
offset_bottom = 469.0
text = "Left-Click a card to change the edition for all cards of that name (and make them match).

Right-Click a card to change only that copy's edition (and not any other copies of it).

Hold Shift while clicking to change the card(s) in the opposite direction."
autowrap_mode = 2

[node name="Warning" type="Label" parent="."]
visible = false
offset_left = 18.0
offset_top = 559.0
offset_right = 315.0
offset_bottom = 640.0
text = "Are you sure the quantities of each card in your deck adds up to the total number it should have?"
label_settings = SubResource("LabelSettings_hd6hl")
autowrap_mode = 2

[node name="Overview" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_right = 215.0
offset_bottom = 188.0
grow_horizontal = 2

[node name="Control" type="Control" parent="Overview"]
layout_mode = 3
anchors_preset = 0
offset_top = 150.0
offset_right = 393.0
offset_bottom = 190.0

[node name="Total" type="Control" parent="Overview/Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Overview/Control/Total"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Cards"
label_settings = ExtResource("8_k7fvg")

[node name="Label2" type="Label" parent="Overview/Control/Total"]
layout_mode = 0
offset_left = 50.0
offset_top = -13.0
offset_right = 84.0
offset_bottom = 29.0
text = "0"
label_settings = ExtResource("9_gu7aw")

[node name="Furre" type="Control" parent="Overview/Control"]
anchors_preset = 0
offset_left = 104.0
offset_top = 6.0
offset_right = 143.0
offset_bottom = 35.0
scale = Vector2(0.7, 0.7)

[node name="Label" type="Label" parent="Overview/Control/Furre"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 23.0
text = "Furres"
label_settings = ExtResource("8_k7fvg")

[node name="Label2" type="Label" parent="Overview/Control/Furre"]
layout_mode = 0
offset_left = 50.1429
offset_top = -13.0
offset_right = 101.143
offset_bottom = 29.0
text = "0"
label_settings = ExtResource("9_gu7aw")

[node name="Action" type="Control" parent="Overview/Control"]
anchors_preset = 0
offset_left = 179.0
offset_top = 6.0
offset_right = 219.0
offset_bottom = 46.0
scale = Vector2(0.7, 0.7)

[node name="Label" type="Label" parent="Overview/Control/Action"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Actions"
label_settings = ExtResource("8_k7fvg")

[node name="Label2" type="Label" parent="Overview/Control/Action"]
layout_mode = 0
offset_left = 57.0
offset_top = -13.0
offset_right = 108.0
offset_bottom = 29.0
text = "0"
label_settings = ExtResource("9_gu7aw")

[node name="Treat" type="Control" parent="Overview/Control"]
anchors_preset = 0
offset_left = 259.0
offset_top = 6.0
offset_right = 299.0
offset_bottom = 46.0
scale = Vector2(0.7, 0.7)

[node name="Label" type="Label" parent="Overview/Control/Treat"]
layout_mode = 0
offset_right = 49.0
offset_bottom = 23.0
text = "Treats"
label_settings = ExtResource("8_k7fvg")

[node name="Label2" type="Label" parent="Overview/Control/Treat"]
layout_mode = 0
offset_left = 48.7144
offset_top = -13.0
offset_right = 99.7144
offset_bottom = 29.0
text = "0"
label_settings = ExtResource("9_gu7aw")

[node name="Haven" type="Control" parent="Overview/Control"]
anchors_preset = 0
offset_left = 333.0
offset_top = 6.0
offset_right = 373.0
offset_bottom = 46.0
scale = Vector2(0.7, 0.7)

[node name="Label" type="Label" parent="Overview/Control/Haven"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Havens"
label_settings = ExtResource("8_k7fvg")

[node name="Label2" type="Label" parent="Overview/Control/Haven"]
layout_mode = 0
offset_left = 58.7143
offset_top = -13.0
offset_right = 103.714
offset_bottom = 29.0
text = "0"
label_settings = ExtResource("9_gu7aw")

[node name="TextEdit" type="TextEdit" parent="Overview"]
layout_mode = 1
anchors_preset = -1
offset_left = 79.0
offset_top = 43.0
offset_right = 318.0
offset_bottom = 133.0
text = "Deck Name"
wrap_mode = 1

[node name="Owner" type="TextureRect" parent="Overview"]
custom_minimum_size = Vector2(60, 84)
layout_mode = 0
offset_left = 18.0
offset_top = 48.0
offset_right = 78.0
offset_bottom = 132.0
tooltip_text = "Left-Click to set the card bank filter to \"Owner Cards\".
Right-Click to remove the owner card. You really should include one, though!"
texture = ExtResource("7_dkq5p")
expand_mode = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Overview/Owner"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 11.0
grow_horizontal = 2
text = "Owner"
label_settings = ExtResource("8_k7fvg")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Overview/Owner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
action_mode = 0
button_mask = 3
flat = true

[node name="Hidden" type="TextureRect" parent="Overview"]
custom_minimum_size = Vector2(60, 84)
layout_mode = 0
offset_left = 318.0
offset_top = 47.0
offset_right = 378.0
offset_bottom = 131.0
tooltip_text = "Left-Click here to upload an image for your opponents to see when looking at cards in your hand.
Right-Click here to set that image back to the default: the question mark.
Middle-Click if you want the last image to be the Backing instead."
texture = ExtResource("7_dkq5p")
expand_mode = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Overview/Hidden"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 11.0
grow_horizontal = 2
text = "Hidden"
label_settings = ExtResource("8_k7fvg")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Overview/Hidden"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
action_mode = 0
button_mask = 7
flat = true

[node name="SortDeck" type="Button" parent="Overview"]
layout_mode = 0
offset_left = 82.0
offset_top = 10.0
offset_right = 182.0
offset_bottom = 41.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_hutxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gev8a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_clach")
theme_override_styles/normal = SubResource("StyleBoxTexture_vytye")
disabled = true
text = "Sort"

[node name="ClearDeck" type="Button" parent="Overview"]
layout_mode = 0
offset_left = 218.0
offset_top = 10.0
offset_right = 318.0
offset_bottom = 41.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_hutxd")
theme_override_styles/hover = SubResource("StyleBoxTexture_gev8a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_clach")
theme_override_styles/normal = SubResource("StyleBoxTexture_vytye")
disabled = true
text = "Clear"

[node name="CardBank" parent="." node_paths=PackedStringArray("big_view", "deck") instance=ExtResource("6_jf1t1")]
anchors_preset = -1
anchor_left = 0.744
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0880127
offset_top = 10.0
offset_right = -25.0
offset_bottom = -36.0
big_view = NodePath("../Card")
deck = NodePath("..")

[node name="TTSInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 300.0
offset_top = 23.0
offset_right = 375.0
offset_bottom = 81.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="TTSInfo"]
layout_mode = 1
offset_right = 69.0
offset_bottom = 57.0
text = "Width: 7
Height: 6
Number: 42"
label_settings = SubResource("LabelSettings_dmw5w")

[connection signal="pressed" from="Port/LoadImport" to="." method="_press_load"]
[connection signal="pressed" from="Port/SaveExport" to="." method="_press_save"]
[connection signal="pressed" from="Port/Singleton" to="." method="_toggle_singleton"]
[connection signal="mouse_entered" from="Overview/Owner" to="." method="_enter_owner"]
[connection signal="pressed" from="Overview/Owner/Button" to="." method="_press_owner"]
[connection signal="mouse_entered" from="Overview/Hidden" to="." method="_enter_hidden"]
[connection signal="pressed" from="Overview/Hidden/Button" to="." method="_press_hidden"]
[connection signal="pressed" from="Overview/SortDeck" to="." method="_press_sort"]
[connection signal="pressed" from="Overview/ClearDeck" to="." method="_press_clear"]
